Footer component added

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -65,3 +65,4 @@
 <app-project *ngIf="selectedTab === 'projects'"></app-project>
 <app-talk *ngIf="selectedTab === 'talks'"></app-talk>
 <app-contact *ngIf="selectedTab === 'contact'"></app-contact>
+<app-footer></app-footer>
