--- a/src/app/home-data/home-data.component.html
+++ b/src/app/home-data/home-data.component.html
@@ -1,10 +1,22 @@
 <div class="container text-center">
     <div class="row details">
-        <div class="col-12">
-
-            <h3>Varsha Jaiswal</h3>
-            <h5>Software Engineer | Web Developer</h5>
-            <p>#IamRemarkable Facilitator | Co-Organizer , GDG Jalandhar | WTM Ambassador</p>
+        <div class="col-2"></div>
+        <div class="col-8">
+            <h2>Varsha Jaiswal</h2>
+            I'm a Software Developement Engineer at
+            <a href="https://mypat.in/" target="_blank">
+                Edfora Infotech (myPAT)
+            </a>
+            and facilitator of
+            <a href="https://iamremarkable.withgoogle.com/" target="_blank">
+                #IamRemarkable
+            </a>
+            Workshop, an initiative by <b>Google</b> and lead
+            <a href="https://gdgjalandhar.com/" target="_blank">
+                Gooogle Developers Group, Jalandhar
+            </a>. <br>
+            You can find me spending a lot of free time with <b>#GDGJalandhar</b> & <b>#WTMJalandhar </b> and mentoring
+            people who are interested in technology.
         </div>
     </div>
 
