--- a/src/app/home-data/home-data.component.html
+++ b/src/app/home-data/home-data.component.html
@@ -1,22 +1,28 @@
 <div class="container text-center">
-    <div class="row details">
+    <div class="row">
         <div class="col-2"></div>
-        <div class="col-8">
-            <h2>Varsha Jaiswal</h2>
-            I'm a Software Developement Engineer at
-            <a href="https://mypat.in/" target="_blank">
-                Edfora Infotech (myPAT)
-            </a>
-            and facilitator of
-            <a href="https://iamremarkable.withgoogle.com/" target="_blank">
-                #IamRemarkable
-            </a>
-            Workshop, an initiative by <b>Google</b> and lead
-            <a href="https://gdgjalandhar.com/" target="_blank">
-                Gooogle Developers Group, Jalandhar
-            </a>. <br>
-            You can find me spending a lot of free time with <b>#GDGJalandhar</b> & <b>#WTMJalandhar </b> and mentoring
-            people who are interested in technology.
+        <div class="col-8 introduction">
+            <h2 class="text-center">Varsha Jaiswal</h2>
+            <p>
+                I'm a Software Developement Engineer at
+                <a href="https://mypat.in/" target="_blank">
+                    Edfora Infotech (myPAT)
+                </a>
+                and facilitator of
+                <a href="https://iamremarkable.withgoogle.com/" target="_blank">
+                    #IamRemarkable
+                </a>
+                Workshop, an initiative by <b>Google</b>.
+            </p>
+            <p> Currently, I'm leading
+                <a href="https://gdgjalandhar.com/" target="_blank">
+                    Gooogle Developers Group, Jalandhar
+                </a> as a Co-Organizer and WTM Ambassador.
+            </p>
+            <p>
+                You can find me spending a lot of free time with <b>#GDGJalandhar</b> & <b>#WTMJalandhar </b> and
+                mentoring people who are interested in technology.
+            </p>
         </div>
     </div>
 
