Header component add

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,13 +1,9 @@
+<app-header></app-header>
 <div class="container">
     <div class="row">
-        <div class="col-12">
-            <h2>VJ</h2>
-        </div>
-    </div>
-    <div class="row">
         <div class="col-12 text-center">
-            <img src="https://secure.meetupstatic.com/photos/member/1/2/3/6/member_277804662.jpeg" alt="Varsha Jaiswal"
-                class="rounded-circle float-center" />
+            <img src="../../assets/varsha.jpg" alt="Varsha Jaiswal"
+                class="rounded-circle float-center profileImage" />
         </div>
     </div>
     <hr>
