--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -6,3 +6,10 @@
     font-weight: bold;
     color: #2F4F4F;
 }
+
+.profileImage {
+    margin: 20px;
+    width: 250px;
+    height: 250px;
+    border: 2px solid slategrey;
+}
