--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+        <img src="../../assets/logo.png" class="d-inline-block align-top logo" alt="Varsha">
+        <span class="name">
+            Varsha Jaiswal
+        </span>
+    </a>
+    <a href="" class="text-right">
+        <span class="name">
+            Gallery
+        </span>
+    </a>
+</nav>
