--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
             Varsha Jaiswal
         </span>
     </a>
-    <a href="" class="text-right">
+    <a href="javascript:void(0)" class="text-right" (click)="selectGallery()">
         <span class="name">
             Gallery
         </span>
