--- a/src/app/home-data/home-data.component.html
+++ b/src/app/home-data/home-data.component.html
@@ -1,23 +1,23 @@
-<div class="container text-center">
+<div class="container homeData">
     <div class="row">
         <div class="col-2"></div>
         <div class="col-8 introduction">
-            <h2 class="text-center">Varsha Jaiswal</h2>
+            <h1 class="text-center">Varsha Jaiswal</h1>
             <p>
-                I'm a Software Developement Engineer at
+                I'm a <b>Software Developement Engineer</b> at
                 <a href="https://mypat.in/" target="_blank">
                     Edfora Infotech (myPAT)
-                </a>
-                and facilitator of
+                </a> working on Angular as the technology stack.
+            </p>
+            <p> I'm also leading
+                <a href="https://gdgjalandhar.com/" target="_blank">
+                    Google Developers Group, Jalandhar
+                </a> as a <b>Co-Organizer</b> and <b>WTM Ambassador</b>.
+                Along with that, I am a facilitator of
                 <a href="https://iamremarkable.withgoogle.com/" target="_blank">
                     #IamRemarkable
                 </a>
-                Workshop, an initiative by <b>Google</b>.
-            </p>
-            <p> Currently, I'm leading
-                <a href="https://gdgjalandhar.com/" target="_blank">
-                    Gooogle Developers Group, Jalandhar
-                </a> as a Co-Organizer and WTM Ambassador.
+                workshop, an initiative by <b>Google</b>.
             </p>
             <p>
                 You can find me spending a lot of free time with <b>#GDGJalandhar</b> & <b>#WTMJalandhar </b> and
