--- a/src/app/home-data/home-data.component.css
+++ b/src/app/home-data/home-data.component.css
@@ -6,10 +6,22 @@
     text-align: justify;
 }
 
-a {
-    text-decoration: none;
+.homeData {
+    background-color: aliceblue;
+    text-align: center;
 }
 
-h2 {
+a {
+    text-decoration: none;
+    color: teal;
+    font-weight: bold;
+}
+
+b {
+    color: dimgray;
+}
+
+h1 {
     margin-bottom: 20px;
+    font-family: cursive;
 }
