--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 text-center">
-            <img src="../../assets/varsha.jpg" alt="Varsha Jaiswal" class="rounded-circle float-center profileImage" />
+            <img [src]="imageUrl" alt="Varsha Jaiswal" class="rounded-circle float-center profileImage" />
         </div>
     </div>
     <hr>
