MoBo responsive initial commit

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,9 +5,9 @@
             Varsha Jaiswal
         </span>
     </a>
-    <a href="javascript:void(0)" class="text-right" (click)="selectGallery()">
+    <!-- <a href="javascript:void(0)" class="text-right" (click)="selectGallery()">
         <span class="name">
             Gallery
         </span>
-    </a>
+    </a> -->
 </nav>
