--- a/src/app/talk/talk.component.html
+++ b/src/app/talk/talk.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-4 mb-3" *ngFor="let talk of talksData">
+        <div class="col-lg-4 col-md-4 col-sm-12 mb-3" *ngFor="let talk of talksData">
             <div class="card">
                 <img class="card-img-top imageSize" [src]="talk.imageUrl" [alt]="talk.title" />
                 <div class="card-body cardSize">
