--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -5,10 +5,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-4" *ngFor="let work of workData">
+        <div class="col-lg-4 col-md-4 col-sm-12" *ngFor="let work of workData">
             <div class="card workCard mb-3">
                 <div class="card-header cardHeader">{{ work.position }}</div>
-                <div class="card-body">
+                <div class="card-body cardData">
                     <h6 class="card-subtitle text-muted"><b>{{ work.organization }}</b></h6>
                     <span class="text-muted duration">{{ work.duration }}</span>
                     <p class="card-text description">{{ work.description }}</p>
@@ -24,10 +24,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-4" *ngFor="let community of communityData">
+        <div class="col-lg-4 col-md-4 col-sm-12" *ngFor="let community of communityData">
             <div class="card communityCard mb-3">
                 <div class="card-header cardHeader">{{ community.organization }}</div>
-                <div class="card-body communityCardData">
+                <div class="card-body cardData">
                     <h6 class="card-subtitle text-muted"><b>{{ community.position1 }}</b></h6>
                     <span class="text-muted duration">{{ community.duration1 }}</span>
                     <hr>
