--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -7,10 +7,10 @@
     </div>
     <hr>
     <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8">
+        <div class="col-lg-2 col-md-2"></div>
+        <div class="col-lg-8 col-md-8 col-sm-12">
             <div class="row">
-                <div class="col-2" *ngFor="let tab of tabData">
+                <div class="col-lg-2 text-center" *ngFor="let tab of tabData">
                     <a href="javascript:void(0)" class="tabName"
                         [ngClass]="selectedTab === tab.toLowerCase() ? 'tabSelected': ''"
                         (click)="changeTabSelected(tab)">
@@ -21,6 +21,7 @@
         </div>
     </div>
     <hr>
+    <app-scroll></app-scroll>
 </div>
 <app-home-data *ngIf="selectedTab === 'home'"></app-home-data>
 <app-bio *ngIf="selectedTab === 'bio'"></app-bio>
