--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,1 +1,15 @@
-<p>project works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12 project" *ngFor="let project of projectsData">
+            <div class="row">
+                <div class="col-lg-10 col-md-10 col-sm-12">
+                   <a [href]="project.projectUrl" target="_blank">
+                       <h5>{{ project.name }}</h5>
+                   </a>
+                </div>
+                <div class="col-lg-2 col-md-2 text-right">{{ project.year }}</div>
+            </div>
+            <p class="text-muted">{{ project.description }}</p>
+        </div>
+    </div>
+</div>
