--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,16 @@
 <div class="container">
-    <h1>Connect with me today.</h1>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 text-center contact">
+            <h4 class="text-muted">Connect with me today at:</h4>
+            <a href="https://www.linkedin.com/in/varshajaiswal/" target="_blank">LinkedIn</a>
+            &nbsp;
+            <a href="https://github.com/Varsha-Jaiswal" target="_blank">GitHub</a>
+            &nbsp;
+            <a href="https://www.facebook.com/varshajaiswal.27" target="_blank">Facebook</a>
+            &nbsp;
+            <a href="https://twitter.com/_varshajaiswal_" target="_blank">Twitter</a>
+            &nbsp;
+            <a href="mailto:shaluvarshajaiswal@gmail.com" target="_top">Send Mail</a>
+        </div>
+    </div>
 </div>
