--- a/src/app/scroll-to-top/scroll-to-top.component.html
+++ b/src/app/scroll-to-top/scroll-to-top.component.html
@@ -1,5 +1,5 @@
 <!--Scroll to top-->
-<div class="scroll-to-top" [ngClass]="{'show-scrollTop': windowScrolled}">
+<div class="scroll-to-top" style="z-index: 5;" [ngClass]="{'show-scrollTop': windowScrolled}">
     <button (click)="scrollToTop()" class="btn btn-primary">
         Top
     </button>
