--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -2,12 +2,12 @@
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12 project" *ngFor="let project of projectsData">
             <div class="row">
-                <div class="col-lg-10 col-md-10 col-sm-12">
+                <div class="col-lg-10 col-md-10 col-sm-10 col-10">
                    <a [href]="project.projectUrl" target="_blank">
                        <h5>{{ project.name }}</h5>
                    </a>
                 </div>
-                <div class="col-lg-2 col-md-2 text-right">{{ project.year }}</div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-2 text-right">{{ project.year }}</div>
             </div>
             <p class="text-muted">{{ project.description }}</p>
         </div>
