--- a/src/app/home-data/home-data.component.html
+++ b/src/app/home-data/home-data.component.html
@@ -1,7 +1,6 @@
 <div class="container homeData">
     <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8 introduction">
+        <div class="col-md-8 col-12 offset-md-2 introduction py-4 px-3">
             <h1 class="text-center">Varsha Jaiswal</h1>
             <p>
                 I'm a <b>Software Developement Engineer</b> at
@@ -20,7 +19,7 @@
                 workshop, an initiative by <b>Google</b>.
             </p>
             <p>
-                You can find me spending a lot of free time with <b>#GDGJalandhar</b> & <b>#WTMJalandhar </b> and
+                You can find me spending a lot of free time with <a href="https://twitter.com/hashtag/GDGJalandhar" target="_blank"><b>#GDGJalandhar</b></a> & <a href="https://twitter.com/hashtag/WTMJalandhar" target="_blank"><b>#WTMJalandhar</b></a> and
                 mentoring people who are interested in technology.
             </p>
         </div>
