--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,10 +1,17 @@
 .tabName {
     color: #696969;
+    display: inline;
+    text-decoration: none;
+}
+
+.tabName:hover {
+    color: darkgrey;
 }
 
 .tabSelected {
     font-weight: bold;
-    color: #2F4F4F;
+    color: #0069d9;
+    font-size: 110%;
 }
 
 .profileImage {
@@ -12,4 +19,14 @@
     width: 250px;
     height: 250px;
     border: 2px solid slategrey;
+}
+
+.homeStyle {
+    margin-top: 8%;
+}
+
+@media (max-width: 425px) {
+    .homeStyle {
+        margin-top: 20%;
+    }
 }
