--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="page-footer">
     <div class="container">
         <div class="row footerData">
-            <div class="col-lg-2 col-md-2 col-sm-12 mb-4 text-center" *ngFor="let imageData of imagesData">
+            <div class="col-lg-2 col-md-2 col-sm-6 col-6 mb-4 text-center" *ngFor="let imageData of imagesData">
                 <div class="view overlay z-depth-1-half">
                     <img [src]="imageData.url" class="img-fluid imageLayout" [alt]="imageData.name">
                     <a href="javascript:void(0)">
