Header color + logo + UI update

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,12 @@
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-dark fixed-top headerStyle shadow">
     <a class="navbar-brand" href="#">
-        <img src="../../assets/logo.png" class="d-inline-block align-top logo" alt="Varsha">
+        <img src="../../assets/logo.png" class="d-inline-block align-top logo" alt="Varsha Jaiswal">
         <span class="name">
             Varsha Jaiswal
         </span>
     </a>
     <!-- <a href="javascript:void(0)" class="text-right" (click)="selectGallery()">
-        <span class="name">
+        <span class="name navbar-brand">
             Gallery
         </span>
     </a> -->
