--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,6 @@
+.headerStyle {
+    background-color: #0069D9;
+}
 .logo {
     width: 40px;
     height: 40px;
@@ -7,6 +10,7 @@
     vertical-align: sub;
     font-family: monospace;
     font-size: 21px;
+    font-weight: bold;
 }
 
 a {
