--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -10,15 +10,15 @@
 
 .tabSelected {
     font-weight: bold;
-    color: #0069d9;
-    font-size: 110%;
+    color: #0069d9 !important;
+    font-size: 130%;
 }
 
 .profileImage {
     margin: 20px;
     width: 250px;
     height: 250px;
-    border: 2px solid slategrey;
+    border: 5px solid #e0e0e0;
 }
 
 .homeStyle {
