Contact detail updated

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -6,7 +6,7 @@
             &nbsp;
             <a href="https://github.com/Varsha-Jaiswal" target="_blank">GitHub</a>
             &nbsp;
-            <a href="https://www.facebook.com/varshajaiswal.27" target="_blank">Facebook</a>
+            <!-- <a href="https://www.facebook.com/varshajaiswal.27" target="_blank">Facebook</a> -->
             &nbsp;
             <a href="https://twitter.com/_varshajaiswal_" target="_blank">Twitter</a>
             &nbsp;
