--- a/src/app/home-data/home-data.component.html
+++ b/src/app/home-data/home-data.component.html
@@ -11,15 +11,18 @@
             <p> I'm also leading
                 <a href="https://gdgjalandhar.com/" target="_blank">
                     Google Developers Group, Jalandhar
-                </a> as a <b>Co-Organizer</b> and <b>WTM Ambassador</b>.
-                Along with that, I am a facilitator of
+                </a> as an <b>Organizer</b> and <b>WTM Ambassador</b>.
+                Along with that, I am the facilitator of
                 <a href="https://iamremarkable.withgoogle.com/" target="_blank">
                     #IamRemarkable
                 </a>
-                workshop, an initiative by <b>Google</b>.
+                workshop, an initiative by <b>Google</b> and the <b>Chapter Lead</b> for
+                <a href="https://www.malikah.org/" target="_blank"> Malikah</a>.
             </p>
             <p>
-                You can find me spending a lot of free time with <a href="https://twitter.com/hashtag/GDGJalandhar" target="_blank"><b>#GDGJalandhar</b></a> & <a href="https://twitter.com/hashtag/WTMJalandhar" target="_blank"><b>#WTMJalandhar</b></a> and
+                You can find me spending a lot of free time with <a href="https://twitter.com/hashtag/GDGJalandhar"
+                    target="_blank"><b>#GDGJalandhar</b></a> & <a href="https://twitter.com/hashtag/WTMJalandhar"
+                    target="_blank"><b>#WTMJalandhar</b></a> and
                 mentoring people who are interested in technology.
             </p>
         </div>
